# perceptron-py

./: Makefile  README.md  albacondor_data.csv  albacondor_perceptron_weights.csv  albacondor_species.csv  albaowl_data.csv  albaowl_perceptron_weights.csv  condors_and_albatrosses.csv  owls_and_albatrosses.csv  setup.cfg
perceptron/: main.py
