[metadata]
name = perceptron
author = Kristoffer Andersson
author-email = kod.kristoff@gmail.com
summary = Machine Learning Mastery course
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/kod-kristoff/ml-mastery-py
license = MIT
classifier =
	Development Status :: 2 - Pre-Alpha
	# Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    # uncomment if you test on these interpreters:
    # Programming Language :: Python :: Implementation :: IronPython
    # Programming Language :: Python :: Implementation :: Jython
    # Programming Language :: Python :: Implementation :: Stackless
    Topic :: Utilities

[files]
packages =
    perceptron

[extras]
dev =
    pytest
bench =
    memory_profiler

[tool:flake8]
max-line-length = 97
